local-tld-fix.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: kube-system
  name: domain-local-ds
  labels:
    k8s-app: domain-local-daemonset
  annotations:
    command: &cmd sed -i '/Network/a Domains = corp.local' /etc/systemd/network/10-eth0.network && systemctl restart systemd-networkd systemd-resolved
spec:
  selector:
    matchLabels:
      k8s-app: domain-local-daemonset
  template:
    metadata:
      labels:
        k8s-app: domain-local-daemonset
    spec:
      hostNetwork: true
      hostPID: true
      containers:
      - name: wait
        image: k8s.gcr.io/pause:3.2
      hostPID: true
      hostNetwork: true
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
  updateStrategy:
    type: RollingUpdate
