root-pod.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: debug
  name: root-pod
  labels:
    k8s-app: root-pod
spec:
  selector:
    matchLabels:
      k8s-app: root-pod
  template:
    metadata:
      labels:
        k8s-app: root-pod
    spec:
      hostNetwork: true
      containers:
      - name: root-pod
        command:
          - bash
          - -c
          - "while true; do sleep 1000; done"
        image: alpine:3.14
        securityContext:
          privileged: true
      hostPID: true
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
  updateStrategy:
    type: RollingUpdate
